# Cherokee

./: .gitignore  CMakeLists.txt  README.md
src/: Makefile  config.json  main.c
src/assets/: carre.html
src/cache/: cache.c  cache.h
src/handler/: handler.c  handler.h  handler_config.c  lama_handler.c
src/logger/: logger.c  logger.h
src/network/: network.h
src/network/server/: server_handler.c  server_initialization.c
src/network/socket/: socket_handler.c  socket_queue.c
src/request/: request.h
src/request/parsing/: parser_utils.h  request_parser.c  utils.c
src/response/: response.c  response.h
src/utils/: parse_config.c  processing_file.c  utils.c  utils.h
src/utils/lib/json/: cJSON.c
